alteracoes no template principal

--- a/indicador/src/main/webapp/templates/template.xhtml
+++ b/indicador/src/main/webapp/templates/template.xhtml
@@ -14,24 +14,35 @@
 
 <h:body>
 <ui:insert name="cabecalho">
-	<div id="cabecalho">
-		<ul id="menu-principal">
-			<li><h:link value="Usuário" outcome="/pages/usuario/lista" /></li>
-			<li><h:link value="Bugs" outcome="/pages/bug/lista" /></li>
-		</ul>
-		<div id="user-info">
-			<h:form>
-				#{usuarioWeb.usuario.login} - 
-				<h:commandLink value="Sair" action="#{loginBean.deslogar}"/>
-			</h:form>
-		</div>
-	</div>
-</ui:insert>
-	
-	<!--   <h:messages errorClass="errors" infoClass="notice"/>-->
-	
-	<p:growl autoUpdate="true"/>
-	
+<h:form>
+		<p:growl id="messages" autoUpdate="true" />
+			
+			<p:layout style="min-width:400px; min-height:600px; text-align: center">
+				<p:layoutUnit position="center">
+					<p:menubar>
+						<p:submenu label="Lançamentos" icon="ui-icon-document">
+							<p:submenu label="Indicadores">
+								<p:menuitem value="Individuais" url="#" />
+								<p:menuitem value="Grupo" url="#" />
+							</p:submenu>
+							<p:menuitem value="Ocorrências" url="#" />
+						</p:submenu>
+						<p:submenu label="Cadastros" icon="ui-icon-document">
+							<p:menuitem value="Funcionários" url="#" />
+							<p:menuitem value="Função" url="#" />
+							<p:menuitem value="Grupo" url="#" />
+						</p:submenu>
+
+						<f:facet name="options">
+							<p:commandButton type="button" value="Logout"
+								icon="ui-icon-extlink" />
+						</f:facet>
+					</p:menubar>
+				</p:layoutUnit>
+			</p:layout>
+		</h:form>
+		
+</ui:insert>	
 	
 	<div id="conteudo">
 		<p:ajaxStatus>
@@ -46,12 +57,7 @@
 			<ui:insert name="corpo"/>
 		</div>
 	</div>
-	
-	<div id="rodape">
-		<div class="rodape-bar">
-			<strong>Bug Tracker</strong> - Controle de bugs | Triadworks
-		</div>
-	</div>
+
 </h:body>
 	
 
