--- a/indicador/src/main/webapp/templates/template.xhtml
+++ b/indicador/src/main/webapp/templates/template.xhtml
@@ -6,60 +6,65 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-	
-	<h:head>
+
+<h:head>
 	<title>Indicadores de Manutencao</title>
 	<h:outputStylesheet library="css" name="bootstrap.css" />
 </h:head>
 
 <h:body>
-<ui:insert name="cabecalho">
-<h:form>
-		<p:growl id="messages" autoUpdate="true" />
-			
-			<p:layout style="min-width:400px; min-height:600px; text-align: center">
-				<p:layoutUnit position="center">
-					<p:menubar>
-						<p:submenu label="Lançamentos" icon="ui-icon-document">
-							<p:submenu label="Indicadores">
-								<p:menuitem value="Individuais" url="#" />
-								<p:menuitem value="Grupo" url="#" />
-							</p:submenu>
-							<p:menuitem value="Ocorrências" url="#" />
-						</p:submenu>
-						<p:submenu label="Cadastros" icon="ui-icon-document">
-							<p:menuitem value="Funcionários" url="#" />
-							<p:menuitem value="Função" url="#" />
+	<div class="container">
+		<div class="page-header">
+			<h4>
+				<h:outputText value="Empresa Vitória"/>
+				<small><h:outputText value="Indicadores de manutenção"/></small>
+			</h4>
+		</div>
+
+
+		<ui:insert name="cabecalho">
+			<h:form>
+				<p:growl id="messages" autoUpdate="true" />
+				<p:menubar>
+					<p:submenu label="Lançamentos" icon="ui-icon-document">
+						<p:submenu label="Indicadores">
+							<p:menuitem value="Individuais" url="#" />
 							<p:menuitem value="Grupo" url="#" />
 						</p:submenu>
+						<p:menuitem value="Ocorrências" url="#" />
+					</p:submenu>
+					<p:submenu label="Cadastros" icon="ui-icon-document">
+						<p:menuitem value="Funcionários" url="#" />
+						<p:menuitem value="Função" outcome="/public/pages/funcao/novo" />
+						<p:menuitem value="Grupo" outcome="/public/pages/grupo/novo"/>
+					</p:submenu>
 
-						<f:facet name="options">
-							<p:commandButton type="button" value="Logout"
-								icon="ui-icon-extlink" />
-						</f:facet>
-					</p:menubar>
-				</p:layoutUnit>
-			</p:layout>
-		</h:form>
-		
-</ui:insert>	
-	
-	<div id="conteudo">
-		<p:ajaxStatus>
-			<f:facet name="start">
-				<h:graphicImage library="imagens" name="ajax-loader.gif"/>
-			</f:facet>
-			<f:facet name="complete">
-				<h:outputText value=""/>
-			</f:facet>
-		</p:ajaxStatus>
-		<div id="container">
-			<ui:insert name="corpo"/>
+					<f:facet name="options">
+						<p:commandButton type="button" value="Logout"
+							icon="ui-icon-extlink" />
+					</f:facet>
+				</p:menubar>
+
+			</h:form>
+
+		</ui:insert>
+
+		<div id="conteudo">
+			<p:ajaxStatus>
+				<f:facet name="start">
+					<h:graphicImage library="image" name="ajax-loader.gif" />
+				</f:facet>
+				<f:facet name="complete">
+					<h:outputText value="" />
+				</f:facet>
+			</p:ajaxStatus>
+			<div id="container">
+				<ui:insert name="corpo" />
+			</div>
 		</div>
 	</div>
-
 </h:body>
-	
+
 
 
 </html>
