--- a/indicador/src/main/webapp/templates/template.xhtml
+++ b/indicador/src/main/webapp/templates/template.xhtml
@@ -45,7 +45,7 @@
 							<p:menuitem value="Individuais" url="#" />
 							<p:menuitem value="Grupo" url="#" />
 						</p:submenu>
-						<p:menuitem value="Ocorrências" url="#" />
+						<p:menuitem value="Ocorrências" outcome="/public/pages/ocorrencia/novo" />
 					</p:submenu>
 					<f:facet name="options">
 						<p:commandButton type="button" value="Logout"
