--- a/indicador/src/main/webapp/templates/template.xhtml
+++ b/indicador/src/main/webapp/templates/template.xhtml
@@ -38,6 +38,13 @@
 						<p:menuitem value="Funcionário" outcome="/public/pages/funcionario/lista" />
 						<p:menuitem value="Função" outcome="/public/pages/funcao/lista" />
 						<p:menuitem value="Grupo" outcome="/public/pages/grupo/lista" />
+						<p:submenu label="Indicador">
+							<p:menuitem value="Cadastro" outcome="/public/pages/indicador/novo" />
+							<p:menuitem value="Listar" outcome="/public/pages/indicador/lista" />
+							<p:menuitem  value="Relacionar" url="#"/>						
+						</p:submenu>
+						
+						
 					</p:submenu>
 					
 					<p:submenu label="Movimentos" icon="ui-icon-document">
@@ -45,7 +52,7 @@
 							<p:menuitem value="Individuais" url="#" />
 							<p:menuitem value="Grupo" url="#" />
 						</p:submenu>
-						<p:menuitem value="Ocorrências" outcome="/public/pages/ocorrencia/novo" />
+						<p:menuitem value="Ocorrências" outcome="/public/pages/ocorrencia/lista" />
 					</p:submenu>
 					<f:facet name="options">
 						<p:commandButton type="button" value="Logout"
