--- a/indicador/src/main/webapp/templates/template.xhtml
+++ b/indicador/src/main/webapp/templates/template.xhtml
@@ -41,7 +41,7 @@
 						<p:submenu label="Indicador">
 							<p:menuitem value="Cadastro" outcome="/public/pages/indicador/novo" />
 							<p:menuitem value="Listar" outcome="/public/pages/indicador/lista" />
-							<p:menuitem  value="Relacionar" url="#"/>						
+							<p:menuitem  value="Relacionar" outcome="/public/pages/indicador/relaciona"/>						
 						</p:submenu>
 						
 						
